@@ -6,7 +6,6 @@
 /* Exported functions                                                 */
 /**********************************************************************/
 gchar* keyboard_string (gint);
-gint   keyboard_preferred (gint);
 void   keyboard_set (gint*);
 gint   keyboard_cb (GtkWidget*, GdkEventKey*, gpointer);
 /**********************************************************************/
