@@ -1,3 +1,9 @@
+2006-03-07  Callum McKenzie  <callum@spooky-possum.org>
+
+	* keyboard.h: 
+	* keyboard.c: Don't upper-case key-presses. This allows alphabetic
+	keys to be used as controls. Fixes bug #333696.
+
 2006-02-18  Callum McKenzie  <callum@spooky-possum.org>
 
 	* gnobots.c: Use the new SVG file for the appicon, not the old PNG
